package edu.hitsz.aircraft;

public interface EnemyFactory {

    AbstractEnemy createEnemy();
}

